[package]
name = "cbtr"
description = "Check, build, test, run"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/cbtr"
repository = "https://github.com/adam-gaia/cbtr"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
color-eyre = "0.6.3"
directories = "5.0.1"
env_logger = "0.11.6"
gix = "0.69.1"
log = "0.4.22"
owo-colors = "4.1.0"
pathdiff = "0.2.3"
serde = { version = "1.0.217", features = ["derive"] }
strum = "0.27.0"
strum_macros = "0.27.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.19"
which = "7.0.1"
xcommand = "0.1.0"

[dev-dependencies]
trycmd = "0.15.8"
